--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Outlet-CSCI499/backend#readme",
   "dependencies": {
+    "axios": "^1.4.0",
     "express": "^5.0.0-beta.1",
     "morgan": "^1.10.0"
   }
